@@ -28,12 +28,6 @@ import com.netflix.maestro.AssertHelper;
 import com.netflix.maestro.engine.MaestroTestHelper;
 import com.netflix.maestro.engine.db.ForeachIterationOverview;
 import com.netflix.maestro.engine.execution.WorkflowSummary;
-import com.netflix.maestro.engine.jobevents.RunWorkflowInstancesJobEvent;
-import com.netflix.maestro.engine.jobevents.StartWorkflowJobEvent;
-import com.netflix.maestro.engine.jobevents.TerminateInstancesJobEvent;
-import com.netflix.maestro.engine.jobevents.WorkflowInstanceUpdateJobEvent;
-import com.netflix.maestro.engine.jobevents.WorkflowVersionUpdateJobEvent;
-import com.netflix.maestro.engine.publisher.NoOpMaestroJobEventPublisher;
 import com.netflix.maestro.engine.utils.AggregatedViewHelper;
 import com.netflix.maestro.engine.utils.TriggerSubscriptionClient;
 import com.netflix.maestro.exceptions.MaestroNotFoundException;
@@ -45,6 +39,7 @@ import com.netflix.maestro.models.definition.User;
 import com.netflix.maestro.models.definition.WorkflowDefinition;
 import com.netflix.maestro.models.error.Details;
 import com.netflix.maestro.models.initiator.ForeachInitiator;
+import com.netflix.maestro.models.initiator.UpstreamInitiator;
 import com.netflix.maestro.models.instance.RunConfig;
 import com.netflix.maestro.models.instance.RunPolicy;
 import com.netflix.maestro.models.instance.StepInstance;
@@ -55,7 +50,12 @@ import com.netflix.maestro.models.instance.WorkflowRuntimeOverview;
 import com.netflix.maestro.models.instance.WorkflowStepStatusSummary;
 import com.netflix.maestro.models.timeline.Timeline;
 import com.netflix.maestro.models.timeline.TimelineLogEvent;
-import java.io.IOException;
+import com.netflix.maestro.queue.MaestroQueueSystem;
+import com.netflix.maestro.queue.jobevents.MaestroJobEvent;
+import com.netflix.maestro.queue.jobevents.StartWorkflowJobEvent;
+import com.netflix.maestro.queue.jobevents.TerminateThenRunJobEvent;
+import com.netflix.maestro.queue.jobevents.WorkflowInstanceUpdateJobEvent;
+import com.netflix.maestro.queue.jobevents.WorkflowVersionUpdateJobEvent;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -77,19 +77,20 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
   private MaestroWorkflowInstanceDao instanceDao;
   private MaestroRunStrategyDao runStrategyDao;
   private WorkflowInstance wfi;
-  private final NoOpMaestroJobEventPublisher publisher = mock(NoOpMaestroJobEventPublisher.class);
+  private final MaestroQueueSystem queueSystem = mock(MaestroQueueSystem.class);
 
   @Before
   public void setUp() throws Exception {
-    instanceDao = new MaestroWorkflowInstanceDao(dataSource, MAPPER, config, publisher, metricRepo);
-    runStrategyDao = new MaestroRunStrategyDao(dataSource, MAPPER, config, publisher, metricRepo);
+    instanceDao =
+        new MaestroWorkflowInstanceDao(dataSource, MAPPER, config, queueSystem, metricRepo);
+    runStrategyDao = new MaestroRunStrategyDao(dataSource, MAPPER, config, queueSystem, metricRepo);
 
     MaestroWorkflowDao workflowDao =
         new MaestroWorkflowDao(
             dataSource,
             MAPPER,
             config,
-            publisher,
+            queueSystem,
             mock(TriggerSubscriptionClient.class),
             metricRepo);
     WorkflowDefinition definition =
@@ -99,22 +100,28 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     Properties properties = new Properties();
     properties.setOwner(User.builder().name("tester").build());
     workflowDao.addWorkflowDefinition(definition, properties);
-    verify(publisher, times(1)).publishOrThrow(any(WorkflowVersionUpdateJobEvent.class), any());
+    verify(queueSystem, times(1)).enqueue(any(), any(WorkflowVersionUpdateJobEvent.class));
+    verify(queueSystem, times(1)).notify(any());
 
     wfi = loadObject(TEST_WORKFLOW_INSTANCE, WorkflowInstance.class);
     wfi.setWorkflowInstanceId(0L);
-    wfi.setInitiator(new ForeachInitiator());
+    ForeachInitiator initiator = new ForeachInitiator();
+    UpstreamInitiator.Info parent = new UpstreamInitiator.Info();
+    parent.setWorkflowId("parent");
+    initiator.setAncestors(Collections.singletonList(parent));
+    wfi.setInitiator(initiator);
     int res = runStrategyDao.startWithRunStrategy(wfi, Defaults.DEFAULT_RUN_STRATEGY);
     assertEquals(1, res);
     assertEquals(1, wfi.getWorkflowInstanceId());
     assertEquals(1, wfi.getWorkflowRunId());
     assertEquals("8a0bd56f-745f-4a2c-b81b-1b2f89127e73", wfi.getWorkflowUuid());
-    verify(publisher, times(1)).publishOrThrow(any(StartWorkflowJobEvent.class), any());
+    verify(queueSystem, times(1)).enqueue(any(), any(StartWorkflowJobEvent.class));
+    verify(queueSystem, times(2)).notify(any());
     wfi.setStartTime(null);
     wfi.setModifyTime(null);
     wfi.setRuntimeOverview(null);
     wfi.setExecutionId(null);
-    reset(publisher);
+    reset(queueSystem);
   }
 
   @After
@@ -129,23 +136,24 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
   }
 
   @Test
-  public void testTryTerminateQueuedInstance() {
+  public void testTryTerminateQueuedInstance() throws Exception {
     boolean res =
         instanceDao.tryTerminateQueuedInstance(wfi, WorkflowInstance.Status.STOPPED, "test-reason");
     assertTrue(res);
-    verify(publisher, times(1)).publishOrThrow(any(), any());
+    verify(queueSystem, times(1)).enqueue(any(), any());
+    verify(queueSystem, times(1)).notify(any());
     WorkflowInstance updated =
         instanceDao.getLatestWorkflowInstanceRun(wfi.getWorkflowId(), wfi.getWorkflowInstanceId());
     assertEquals(WorkflowInstance.Status.STOPPED, updated.getStatus());
     assertEquals(
         "Workflow instance status becomes [STOPPED] due to reason [test-reason]",
-        updated.getTimeline().getTimelineEvents().get(0).getMessage());
+        updated.getTimeline().getTimelineEvents().getFirst().getMessage());
     assertNotNull(updated.getEndTime());
     assertNotNull(updated.getModifyTime());
   }
 
   @Test
-  public void testTryTerminateQueuedInstanceNoOp() {
+  public void testTryTerminateQueuedInstanceNoOp() throws Exception {
     WorkflowSummary summary = new WorkflowSummary();
     summary.setWorkflowId(wfi.getWorkflowId());
     summary.setWorkflowInstanceId(wfi.getWorkflowInstanceId());
@@ -155,7 +163,8 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     boolean res =
         instanceDao.tryTerminateQueuedInstance(wfi, WorkflowInstance.Status.STOPPED, "test-reason");
     assertFalse(res);
-    verify(publisher, times(0)).publishOrThrow(any(), any());
+    verify(queueSystem, times(0)).enqueue(any(), any());
+    verify(queueSystem, times(1)).notify(any());
     WorkflowInstance updated =
         instanceDao.getLatestWorkflowInstanceRun(wfi.getWorkflowId(), wfi.getWorkflowInstanceId());
     assertEquals(WorkflowInstance.Status.CREATED, updated.getStatus());
@@ -176,30 +185,36 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     wfi3.setWorkflowUuid("wfi3-uuid");
     wfi3.setWorkflowInstanceId(102L);
     Optional<Details> res =
-        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Arrays.asList(wfi1, wfi2, wfi3), 2);
+        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Arrays.asList(wfi1, wfi2, wfi3));
     assertFalse(res.isPresent());
+    verify(queueSystem, times(1)).enqueue(any(), any(TerminateThenRunJobEvent.class));
+    verify(queueSystem, times(1)).notify(any());
+
     int cnt =
         instanceDao.terminateQueuedInstances(
             TEST_WORKFLOW_ID, 3, WorkflowInstance.Status.STOPPED, "test-reason");
     assertEquals(3, cnt);
-    verify(publisher, times(1)).publishOrThrow(any(WorkflowInstanceUpdateJobEvent.class), any());
+    verify(queueSystem, times(1)).enqueue(any(), any(WorkflowInstanceUpdateJobEvent.class));
+    verify(queueSystem, times(2)).notify(any());
     cnt =
         instanceDao.terminateQueuedInstances(
             TEST_WORKFLOW_ID, 2, WorkflowInstance.Status.FAILED, "test-reason");
     assertEquals(1, cnt);
-    verify(publisher, times(2)).publishOrThrow(any(WorkflowInstanceUpdateJobEvent.class), any());
+    verify(queueSystem, times(2)).enqueue(any(), any(WorkflowInstanceUpdateJobEvent.class));
+    verify(queueSystem, times(3)).notify(any());
     cnt =
         instanceDao.terminateQueuedInstances(
             TEST_WORKFLOW_ID, 1, WorkflowInstance.Status.STOPPED, "test-reason");
     assertEquals(0, cnt);
-    verify(publisher, times(2)).publishOrThrow(any(WorkflowInstanceUpdateJobEvent.class), any());
+    verify(queueSystem, times(2)).enqueue(any(), any(WorkflowInstanceUpdateJobEvent.class));
+    verify(queueSystem, times(4)).notify(any());
     MaestroTestHelper.removeWorkflowInstance(dataSource, TEST_WORKFLOW_ID, 100);
     MaestroTestHelper.removeWorkflowInstance(dataSource, TEST_WORKFLOW_ID, 101);
     MaestroTestHelper.removeWorkflowInstance(dataSource, TEST_WORKFLOW_ID, 102);
   }
 
   @Test
-  public void testTerminateQueuedInstancesNoOp() {
+  public void testTerminateQueuedInstancesNoOp() throws Exception {
     WorkflowSummary summary = new WorkflowSummary();
     summary.setWorkflowId(wfi.getWorkflowId());
     summary.setWorkflowInstanceId(wfi.getWorkflowInstanceId());
@@ -209,7 +224,8 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
         instanceDao.terminateQueuedInstances(
             TEST_WORKFLOW_ID, 2, WorkflowInstance.Status.STOPPED, "test-reason");
     assertEquals(0, cnt);
-    verify(publisher, times(0)).publishOrThrow(any(), any());
+    verify(queueSystem, times(0)).enqueue(any(), any());
+    verify(queueSystem, times(1)).notify(null);
   }
 
   @Test
@@ -224,13 +240,15 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     wfi3.setWorkflowUuid("wfi3-uuid");
     wfi3.setWorkflowInstanceId(102L);
     Optional<Details> res =
-        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Arrays.asList(wfi1, wfi2, wfi3), 2);
+        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Arrays.asList(wfi1, wfi2, wfi3));
     assertFalse(res.isPresent());
+    verify(queueSystem, times(1)).enqueue(any(), any(TerminateThenRunJobEvent.class));
+    verify(queueSystem, times(1)).notify(any());
     int cnt =
         instanceDao.terminateRunningInstances(
             TEST_WORKFLOW_ID, 5, Actions.WorkflowInstanceAction.STOP, TEST_CALLER, "test-reason");
     assertEquals(0, cnt);
-    verify(publisher, times(0)).publishOrThrow(any(TerminateInstancesJobEvent.class), any());
+    verify(queueSystem, times(0)).enqueueOrThrow(any(TerminateThenRunJobEvent.class));
 
     Stream.of(wfi1, wfi2, wfi3)
         .forEach(
@@ -246,19 +264,20 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
         instanceDao.terminateRunningInstances(
             TEST_WORKFLOW_ID, 5, Actions.WorkflowInstanceAction.STOP, TEST_CALLER, "test-reason");
     assertEquals(3, cnt);
-    verify(publisher, times(1)).publishOrThrow(any(TerminateInstancesJobEvent.class), any());
+    verify(queueSystem, times(1)).enqueueOrThrow(any(TerminateThenRunJobEvent.class));
 
     // async termination
     cnt =
         instanceDao.terminateRunningInstances(
             TEST_WORKFLOW_ID, 2, Actions.WorkflowInstanceAction.KILL, TEST_CALLER, "test-reason");
     assertEquals(3, cnt);
-    verify(publisher, times(3)).publishOrThrow(any(TerminateInstancesJobEvent.class), any());
+    verify(queueSystem, times(3)).enqueueOrThrow(any(TerminateThenRunJobEvent.class));
+
     cnt =
         instanceDao.terminateRunningInstances(
             TEST_WORKFLOW_ID, 1, Actions.WorkflowInstanceAction.STOP, TEST_CALLER, "test-reason");
     assertEquals(3, cnt);
-    verify(publisher, times(6)).publishOrThrow(any(TerminateInstancesJobEvent.class), any());
+    verify(queueSystem, times(6)).enqueueOrThrow(any(TerminateThenRunJobEvent.class));
 
     MaestroTestHelper.removeWorkflowInstance(dataSource, TEST_WORKFLOW_ID, 100);
     MaestroTestHelper.removeWorkflowInstance(dataSource, TEST_WORKFLOW_ID, 101);
@@ -266,12 +285,13 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
   }
 
   @Test
-  public void testTerminateRunningInstancesNoOp() {
+  public void testTerminateRunningInstancesNoOp() throws Exception {
     int cnt =
         instanceDao.terminateRunningInstances(
             TEST_WORKFLOW_ID, 2, Actions.WorkflowInstanceAction.STOP, TEST_CALLER, "test-reason");
     assertEquals(0, cnt);
-    verify(publisher, times(0)).publishOrThrow(any(), any());
+    verify(queueSystem, times(0)).enqueue(any(), any());
+    verify(queueSystem, times(0)).notify(any());
   }
 
   @Test
@@ -287,7 +307,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     wfi3.setWorkflowInstanceId(102L);
 
     Optional<Details> res =
-        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Arrays.asList(wfi1, wfi2, wfi3), 2);
+        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Arrays.asList(wfi1, wfi2, wfi3));
     assertFalse(res.isPresent());
     assertEquals(100, wfi1.getWorkflowInstanceId());
     assertEquals(1, wfi1.getWorkflowRunId());
@@ -298,7 +318,8 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     assertEquals(102, wfi3.getWorkflowInstanceId());
     assertEquals(1, wfi3.getWorkflowRunId());
     assertEquals(WorkflowInstance.Status.CREATED, wfi3.getStatus());
-    verify(publisher, times(2)).publishOrThrow(any(), any());
+    verify(queueSystem, times(1)).enqueue(any(), any());
+    verify(queueSystem, times(1)).notify(any());
 
     WorkflowInstance actual =
         instanceDao.getLatestWorkflowInstanceRun(TEST_WORKFLOW_ID, wfi3.getWorkflowInstanceId());
@@ -306,31 +327,32 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     assertEquals(1, actual.getWorkflowRunId());
     assertEquals(WorkflowInstance.Status.CREATED, actual.getStatus());
 
-    reset(publisher);
+    reset(queueSystem);
     wfi3.setWorkflowUuid("wfi-uuid");
     wfi3.setWorkflowInstanceId(103L);
 
     doAnswer(
             (Answer<Void>)
                 invocation -> {
-                  RunWorkflowInstancesJobEvent jobEvent =
-                      (RunWorkflowInstancesJobEvent) invocation.getArguments()[0];
+                  TerminateThenRunJobEvent jobEvent =
+                      (TerminateThenRunJobEvent) invocation.getArguments()[1];
                   assertEquals(TEST_WORKFLOW_ID, jobEvent.getWorkflowId());
-                  assertEquals(3, jobEvent.size());
-                  assertEquals(103, jobEvent.getInstanceRunUuids().get(2).getInstanceId());
-                  assertEquals("wfi-uuid", jobEvent.getInstanceRunUuids().get(2).getUuid());
+                  assertEquals(1, jobEvent.getRunAfter().size());
+                  assertEquals(103, jobEvent.getRunAfter().getFirst().getInstanceId());
+                  assertEquals("wfi-uuid", jobEvent.getRunAfter().getFirst().getUuid());
                   return null;
                 })
-        .when(publisher)
-        .publishOrThrow(any(), any());
+        .when(queueSystem)
+        .enqueue(any(), any());
 
-    res = instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Arrays.asList(wfi1, wfi2, wfi3), 5);
+    res = instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Arrays.asList(wfi1, wfi2, wfi3));
     assertFalse(res.isPresent());
     actual =
         instanceDao.getLatestWorkflowInstanceRun(TEST_WORKFLOW_ID, wfi3.getWorkflowInstanceId());
     assertEquals(103, actual.getWorkflowInstanceId());
     assertEquals(1, actual.getWorkflowRunId());
     assertEquals(WorkflowInstance.Status.CREATED, actual.getStatus());
+    verify(queueSystem, times(1)).notify(any());
 
     MaestroTestHelper.removeWorkflowInstance(dataSource, TEST_WORKFLOW_ID, 100);
     MaestroTestHelper.removeWorkflowInstance(dataSource, TEST_WORKFLOW_ID, 101);
@@ -343,13 +365,14 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     WorkflowInstance wfi1 = loadObject(TEST_WORKFLOW_INSTANCE, WorkflowInstance.class);
     wfi1.setWorkflowUuid("wfi1-uuid"); // same instance id
     Optional<Details> res =
-        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Collections.singletonList(wfi1), 5);
+        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Collections.singletonList(wfi1));
     assertFalse(res.isPresent());
-    verify(publisher, times(1)).publishOrThrow(any(), any());
+    verify(queueSystem, times(0)).enqueue(any(), any());
+    verify(queueSystem, times(1)).notify(any());
 
     WorkflowInstance wfi2 = loadObject(TEST_WORKFLOW_INSTANCE, WorkflowInstance.class); // same uuid
     wfi2.setWorkflowInstanceId(2);
-    res = instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Collections.singletonList(wfi2), 5);
+    res = instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Collections.singletonList(wfi2));
     assertTrue(res.isPresent());
     assertEquals(
         "ERROR: failed creating workflow instance batch with an error", res.get().getMessage());
@@ -379,7 +402,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     wfi1.getRunConfig().setPolicy(RunPolicy.RESTART_FROM_INCOMPLETE);
 
     Optional<Details> ret =
-        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Collections.singletonList(wfi1), 2);
+        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Collections.singletonList(wfi1));
     assertFalse(ret.isPresent());
 
     String rawStatus = instanceDao.getWorkflowInstanceRawStatus(TEST_WORKFLOW_ID, 1L, 1L);
@@ -392,7 +415,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
   }
 
   @Test
-  public void testUpdateWorkflowInstanceToEnd() {
+  public void testUpdateWorkflowInstanceToEnd() throws Exception {
     WorkflowSummary summary = new WorkflowSummary();
     summary.setWorkflowId(wfi.getWorkflowId());
     summary.setWorkflowInstanceId(wfi.getWorkflowInstanceId());
@@ -405,7 +428,12 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
             null);
     Optional<Details> result =
         instanceDao.updateWorkflowInstance(
-            summary, overview, null, WorkflowInstance.Status.SUCCEEDED, 12345);
+            summary,
+            overview,
+            null,
+            WorkflowInstance.Status.SUCCEEDED,
+            12345,
+            mock(MaestroJobEvent.class));
     assertFalse(result.isPresent());
     WorkflowInstance latestRun =
         instanceDao.getLatestWorkflowInstanceRun(wfi.getWorkflowId(), wfi.getWorkflowInstanceId());
@@ -413,10 +441,12 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     assertEquals(WorkflowInstance.Status.SUCCEEDED, latestRun.getStatus());
     assertEquals(12345L, latestRun.getEndTime().longValue());
     assertEquals("test_execution_id", latestRun.getExecutionId());
+    verify(queueSystem, times(1)).enqueue(any(), any());
+    verify(queueSystem, times(1)).notify(any());
   }
 
   @Test
-  public void testUpdateWorkflowInstanceToBegin() {
+  public void testUpdateWorkflowInstanceToBegin() throws Exception {
     WorkflowSummary summary = new WorkflowSummary();
     summary.setWorkflowId(wfi.getWorkflowId());
     summary.setWorkflowInstanceId(wfi.getWorkflowInstanceId());
@@ -429,7 +459,12 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
             null);
     Optional<Details> result =
         instanceDao.updateWorkflowInstance(
-            summary, overview, null, WorkflowInstance.Status.IN_PROGRESS, 12345);
+            summary,
+            overview,
+            null,
+            WorkflowInstance.Status.IN_PROGRESS,
+            12345,
+            mock(MaestroJobEvent.class));
     assertFalse(result.isPresent());
     WorkflowInstance latestRun =
         instanceDao.getLatestWorkflowInstanceRun(wfi.getWorkflowId(), wfi.getWorkflowInstanceId());
@@ -437,10 +472,12 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     assertEquals(WorkflowInstance.Status.IN_PROGRESS, latestRun.getStatus());
     assertEquals(12345L, latestRun.getStartTime().longValue());
     assertEquals("test_execution_id", latestRun.getExecutionId());
+    verify(queueSystem, times(1)).enqueue(any(), any());
+    verify(queueSystem, times(1)).notify(any());
   }
 
   @Test
-  public void testUpdateRuntimeOverview() {
+  public void testUpdateRuntimeOverview() throws Exception {
     WorkflowSummary summary = new WorkflowSummary();
     summary.setWorkflowId(wfi.getWorkflowId());
     summary.setWorkflowInstanceId(wfi.getWorkflowInstanceId());
@@ -460,6 +497,8 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     assertEquals(overview, latestRun.getRuntimeOverview());
     assertEquals(timeline, latestRun.getTimeline());
     assertEquals("test_execution_id", latestRun.getExecutionId());
+    verify(queueSystem, times(0)).enqueue(any(), any());
+    verify(queueSystem, times(1)).notify(any());
   }
 
   @Test
@@ -560,7 +599,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
 
     List<WorkflowInstance> workflowInstances =
         instanceDao.getWorkflowInstancesWithLatestRun(wfi.getWorkflowId(), 1, 1, false);
-    WorkflowInstance instanceRun = workflowInstances.get(0);
+    WorkflowInstance instanceRun = workflowInstances.getFirst();
     instanceRun.setModifyTime(null);
     assertEquals(wfi, instanceRun);
   }
@@ -626,7 +665,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
   }
 
   @Test
-  public void testTryUnblockFailedWorkflowInstance() {
+  public void testTryUnblockFailedWorkflowInstance() throws Exception {
     int cnt =
         instanceDao.terminateQueuedInstances(
             TEST_WORKFLOW_ID, 2, WorkflowInstance.Status.FAILED, "test-reason");
@@ -637,10 +676,12 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     assertTrue(ret);
     status = instanceDao.getWorkflowInstanceRawStatus(TEST_WORKFLOW_ID, 1L, 1L);
     assertEquals("FAILED_1", status);
+    verify(queueSystem, times(1)).enqueue(any(), any(StartWorkflowJobEvent.class));
+    verify(queueSystem, times(2)).notify(any());
   }
 
   @Test
-  public void testTryUnblockFailedWorkflowInstanceNoop() {
+  public void testTryUnblockFailedWorkflowInstanceNoop() throws Exception {
     int cnt =
         instanceDao.terminateQueuedInstances(
             TEST_WORKFLOW_ID, 2, WorkflowInstance.Status.STOPPED, "test-reason");
@@ -651,10 +692,12 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     assertFalse(ret);
     status = instanceDao.getWorkflowInstanceRawStatus(TEST_WORKFLOW_ID, 1L, 1L);
     assertEquals("STOPPED", status);
+    verify(queueSystem, times(1)).enqueue(any(), any());
+    verify(queueSystem, times(2)).notify(any());
   }
 
   @Test
-  public void testTryUnblockFailedWorkflowInstances() {
+  public void testTryUnblockFailedWorkflowInstances() throws Exception {
     wfi.setWorkflowUuid("test-uuid");
     wfi.setWorkflowInstanceId(0L);
     int res = runStrategyDao.startWithRunStrategy(wfi, Defaults.DEFAULT_RUN_STRATEGY);
@@ -667,20 +710,26 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     assertEquals("FAILED", status);
     status = instanceDao.getWorkflowInstanceRawStatus(TEST_WORKFLOW_ID, 2L, 1L);
     assertEquals("FAILED", status);
+    verify(queueSystem, times(2)).enqueue(any(), any());
+    verify(queueSystem, times(2)).notify(any());
 
     int ret = instanceDao.tryUnblockFailedWorkflowInstances(TEST_WORKFLOW_ID, 1, null);
-    assertEquals(1, ret);
+    assertEquals(2, ret);
     status = instanceDao.getWorkflowInstanceRawStatus(TEST_WORKFLOW_ID, 1L, 1L);
     assertEquals("FAILED_1", status);
     status = instanceDao.getWorkflowInstanceRawStatus(TEST_WORKFLOW_ID, 2L, 1L);
-    assertEquals("FAILED", status);
+    assertEquals("FAILED_1", status);
+    verify(queueSystem, times(3)).enqueue(any(), any());
+    verify(queueSystem, times(3)).notify(any());
 
     ret = instanceDao.tryUnblockFailedWorkflowInstances(TEST_WORKFLOW_ID, 2, null);
-    assertEquals(1, ret);
+    assertEquals(0, ret);
     status = instanceDao.getWorkflowInstanceRawStatus(TEST_WORKFLOW_ID, 1L, 1L);
     assertEquals("FAILED_1", status);
     status = instanceDao.getWorkflowInstanceRawStatus(TEST_WORKFLOW_ID, 2L, 1L);
     assertEquals("FAILED_1", status);
+    verify(queueSystem, times(3)).enqueue(any(), any());
+    verify(queueSystem, times(4)).notify(any());
 
     MaestroTestHelper.removeWorkflowInstance(dataSource, TEST_WORKFLOW_ID, 2);
   }
@@ -730,7 +779,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
   }
 
   @Test
-  public void testGetRestartedForeachIterationOverview() {
+  public void testGetRestartedForeachIterationOverview() throws Exception {
     List<ForeachIterationOverview> stats =
         instanceDao.getForeachIterationOverviewWithCheckpoint(wfi.getWorkflowId(), 0, 0, false);
     assertTrue(stats.isEmpty());
@@ -741,12 +790,14 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     wfi.setStatus(WorkflowInstance.Status.IN_PROGRESS);
     wfi.setWorkflowUuid("uuid-2");
     Optional<Details> res =
-        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Collections.singletonList(wfi), 1);
+        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Collections.singletonList(wfi));
     assertFalse(res.isPresent());
+    verify(queueSystem, times(1)).enqueue(any(), any());
+    verify(queueSystem, times(1)).notify(any());
 
     stats = instanceDao.getForeachIterationOverviewWithCheckpoint(wfi.getWorkflowId(), 0, 0, true);
     checkSingletonStats(stats, 1L, WorkflowInstance.Status.IN_PROGRESS);
-    assertNull(stats.get(0).getRollupOverview());
+    assertNull(stats.getFirst().getRollupOverview());
 
     WorkflowSummary summary = new WorkflowSummary();
     summary.setWorkflowId(wfi.getWorkflowId());
@@ -759,19 +810,21 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
             new WorkflowRollupOverview());
     res =
         instanceDao.updateWorkflowInstance(
-            summary, overview, null, WorkflowInstance.Status.SUCCEEDED, 12345);
+            summary, overview, null, WorkflowInstance.Status.SUCCEEDED, 12345, null);
     assertFalse(res.isPresent());
+    verify(queueSystem, times(1)).enqueue(any(), any());
+    verify(queueSystem, times(2)).notify(any());
 
     stats = instanceDao.getForeachIterationOverviewWithCheckpoint(wfi.getWorkflowId(), 1, 0, false);
     checkSingletonStats(stats, 1L, WorkflowInstance.Status.CREATED);
-    assertNull(stats.get(0).getRollupOverview());
+    assertNull(stats.getFirst().getRollupOverview());
     stats = instanceDao.getForeachIterationOverviewWithCheckpoint(wfi.getWorkflowId(), 2, 0, false);
     checkSingletonStats(stats, 1L, WorkflowInstance.Status.SUCCEEDED);
-    assertNotNull(stats.get(0).getRollupOverview());
+    assertNotNull(stats.getFirst().getRollupOverview());
 
     stats = instanceDao.getForeachIterationOverviewWithCheckpoint(wfi.getWorkflowId(), 0, 0, true);
     checkSingletonStats(stats, 1L, WorkflowInstance.Status.SUCCEEDED);
-    assertNotNull(stats.get(0).getRollupOverview());
+    assertNotNull(stats.getFirst().getRollupOverview());
 
     stats = instanceDao.getForeachIterationOverviewWithCheckpoint(wfi.getWorkflowId(), 0, 2, true);
     assertTrue(stats.isEmpty());
@@ -781,7 +834,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
       List<ForeachIterationOverview> stats, long instanceId, WorkflowInstance.Status status) {
     assertEquals(1, stats.size());
     assertEquals(1, instanceId);
-    assertEquals(status, stats.get(0).getStatus());
+    assertEquals(status, stats.getFirst().getStatus());
   }
 
   @Test
@@ -824,7 +877,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     wfi2.setWorkflowRunId(2L);
     wfi2.setInitiator(new ForeachInitiator());
     Optional<Details> ret =
-        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Collections.singletonList(wfi2), 2);
+        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Collections.singletonList(wfi2));
     assertFalse(ret.isPresent());
 
     assertEquals(2L, instanceDao.getLargestForeachRunIdFromRuns(TEST_WORKFLOW_ID));
@@ -844,7 +897,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     }
   }
 
-  private void initializeForGetWorkflowInstancesLatestRun() throws IOException {
+  private void initializeForGetWorkflowInstancesLatestRun() throws Exception {
     List<WorkflowInstance> instances = new ArrayList<>();
 
     for (int i = 1; i < 10; i++) {
@@ -872,7 +925,9 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
       instances.add(wfi);
     }
 
-    instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, instances, instances.size());
+    instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, instances);
+    verify(queueSystem, times(1)).enqueue(any(), any(TerminateThenRunJobEvent.class));
+    verify(queueSystem, times(1)).notify(any());
   }
 
   @Test
@@ -898,7 +953,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     wfi1.getRunConfig().setPolicy(RunPolicy.RESTART_FROM_INCOMPLETE);
 
     Optional<Details> ret =
-        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Collections.singletonList(wfi1), 2);
+        instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Collections.singletonList(wfi1));
     assertFalse(ret.isPresent());
 
     WorkflowInstance wfi2 = loadObject(TEST_WORKFLOW_INSTANCE, WorkflowInstance.class);
@@ -917,7 +972,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
     wfi5.setWorkflowRunId(3L);
     wfi5.setInitiator(new ForeachInitiator());
 
-    ret = instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Arrays.asList(wfi2, wfi3, wfi5), 2);
+    ret = instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, Arrays.asList(wfi2, wfi3, wfi5));
     assertFalse(ret.isPresent());
 
     WorkflowSummary summary = new WorkflowSummary();
@@ -931,7 +986,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
             rollup1);
     Optional<Details> details =
         instanceDao.updateWorkflowInstance(
-            summary, overview, null, WorkflowInstance.Status.SUCCEEDED, 12345);
+            summary, overview, null, WorkflowInstance.Status.SUCCEEDED, 12345, null);
     assertFalse(details.isPresent());
 
     summary = new WorkflowSummary();
@@ -945,7 +1000,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
             rollup2);
     details =
         instanceDao.updateWorkflowInstance(
-            summary, overview, null, WorkflowInstance.Status.SUCCEEDED, 12345);
+            summary, overview, null, WorkflowInstance.Status.SUCCEEDED, 12345, null);
     assertFalse(details.isPresent());
 
     summary = new WorkflowSummary();
@@ -959,7 +1014,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
             rollup3);
     details =
         instanceDao.updateWorkflowInstance(
-            summary, overview, null, WorkflowInstance.Status.SUCCEEDED, 12345);
+            summary, overview, null, WorkflowInstance.Status.SUCCEEDED, 12345, null);
     assertFalse(details.isPresent());
 
     List<WorkflowRollupOverview> result =
@@ -982,7 +1037,7 @@ public class MaestroWorkflowInstanceDaoTest extends MaestroDaoBaseTest {
         wfi.setWorkflowInstanceId(100 + i);
         insertionList.add(wfi);
       }
-      instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, insertionList, insertionList.size());
+      instanceDao.runWorkflowInstances(TEST_WORKFLOW_ID, insertionList);
       long[] ids = instanceDao.getMinMaxWorkflowInstanceIds(wfi.getWorkflowId());
       assertEquals(125, ids[1]);
       assertEquals(1, ids[0]);
